Fix test case.